--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,57 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.android.yahoo.sharkfeed">
 
+    <permission
+        android:name="com.android.yahoo.sharkfeed.PRIVATE"
+        android:protectionLevel="signature"/>
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="com.android.yahoo.sharkfeed.PRIVATE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_shark_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_shark_logo"
         android:supportsRtl="true"
         android:theme="@style/ToolbarSupportTheme">
         <activity android:name=".activity.SharkFeedGalleryActivity">
+        </activity>
+        <activity android:name=".activity.LightBoxActivity"/>
+        <activity android:name=".activity.SharkFeedSwipeActivity"/>
+
+        <service android:name=".util.PollService"/>
+        <service
+            android:name=".util.PollJobService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
+        <receiver android:name=".util.StartUpReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".util.NotificationReceiver"
+            android:exported="false">
+            <intent-filter android:priority="-999">
+                <action android:name="com.android.yahoo.sharkfeed.ACTION_SHOW_NOTIFICATION"/>
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".activity.SplashscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LightBoxActivity"/>
-        <activity
-            android:name=".activity.SharkFeedSwipeActivity"/>
     </application>
 
 </manifest>
